Fixed Spacing
Fixed styling and spacing within the settings menu.

<organization, bug

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -9,7 +9,7 @@
  	-fx-background-color: #1d1d1d;
  }
 
- .label, .button, .radio-button {
+ .label, .button {
  	-fx-text-fill: #f5f5f5;
  	-fx-font-size: 15.0px;
     -fx-font-weight: bold;
@@ -19,6 +19,15 @@
  	-fx-text-fill: #f83ab3;
  }
  
+ .radio-button {
+ 	-fx-text-fill: #f5f5f5;
+ 	-fx-font-size: 13.0px;
+ }
+ 
  .radio-button .radio {
  	-fx-background-color: #f83ab3;
+ }
+ 
+  .radio-button .radio:armed {
+ 	-fx-background-color: #1d1d1d;
  }
